[gd_scene load_steps=4 format=3 uid="uid://diuk4drxe2wsi"]

[ext_resource type="Script" uid="uid://cbkmxs7jr6y27" path="res://01_UserInterface/MainMenu/main_menu.gd" id="1_1chaj"]
[ext_resource type="Theme" uid="uid://lsxyyvxmbjpw" path="res://01_UserInterface/Themes/MenuMenuTheme.tres" id="1_12cqk"]
[ext_resource type="Texture2D" uid="uid://bnmt2u6co8per" path="res://02_Scenes/Main/paul-volkmer-qVotvbsuM_c-unsplash.jpg" id="2_gsdt6"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("new_game_button", "options_button", "quit_game_button", "sprite_background", "high_score_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1chaj")
new_game_button = NodePath("MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/NewGameButton")
options_button = NodePath("MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/OptionsButton")
quit_game_button = NodePath("MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/QuitGameButton")
sprite_background = NodePath("MarginContainer/background")
high_score_label = NodePath("MarginContainer/VBoxContainer/VBoxContainer2/HighScoreLabel")
rotation_speed = 0.05

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="background" type="Sprite2D" parent="MarginContainer"]
position = Vector2(664, 360)
rotation = 0.685072
scale = Vector2(0.484075, 0.448914)
texture = ExtResource("2_gsdt6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HighScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_12cqk")
theme_override_font_sizes/font_size = 36
text = "High Score: 00"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 90
alignment = 1

[node name="GameTitleLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_12cqk")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 80
text = "Asteroids"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_12cqk")
text = "New Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_12cqk")
disabled = true
text = "Options"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_12cqk")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Quit Game"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Version 0.0.0"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
